--- a/mybooks-vue/package.json
+++ b/mybooks-vue/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.8",
     "@headlessui/vue": "^1.7.23",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
